--- a/src/dashboard/dashboardPacientes.html
+++ b/src/dashboard/dashboardPacientes.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="./../../assets/styles/estilos.css">
     <title>Document</title>
 </head>
 <body>
@@ -14,7 +16,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-3" id="fila"></div>
     </section>
 
-    <script src="./../controller/controladorConsulta/controladorConsultaPaciente.js" type="module"></script>
+    <script src="./../../assets/controller/controladorConsulta/controladorConsultaPaciente.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
