--- a/src/dashboard/dashboardPacientes.html
+++ b/src/dashboard/dashboardPacientes.html
@@ -16,7 +16,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-3" id="fila"></div>
     </section>
 
-    <script src="./../../assets/controller/controladorConsulta/controladorConsultaPaciente.js" type="module"></script>
+    <script src="../controller/controladorConsulta/controladorConsultaPaciente.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
