se añadi el enrutamiento para navegar entre los registros y las consultas

--- a/src/dashboard/dashboardMedicamento.html
+++ b/src/dashboard/dashboardMedicamento.html
@@ -10,10 +10,51 @@
 </head>
 <body>
     
-    <section></section>
+    <header>
+        <nav class="navbar navbar-expand-lg menu navbar-dark fixed-top mb-4">
+          <div class="container-fluid">
+            <img src="../../assets/img/logotipo.png" alt="logo" class="img-fluid" height="80" width="80">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="../../">Home</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Registros
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="../views/registroPacientes.html">Paciente</a></li>
+                    <li><a class="dropdown-item" href="../views/registroMedico.html">Medico</a></li>
+                    <li><a class="dropdown-item" href="../views/registroMedicamento.html">Medicamento</a></li>
+                    <li><a class="dropdown-item" href="../views/registroEnfermedad.html">Enfermedad</a></li>
+                    <li><a class="dropdown-item" href="../views/signovital.html">Signo Vital</a></li>
+                  </ul>
+                </li>
+  
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Consultas
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="./dashboardPacientes.html">Paciente</a></li>
+                    <li><a class="dropdown-item" href="./dashboardMedico.html">Medico</a></li>
+                    <li><a class="dropdown-item" href="./dashboardMedicamento.html">Medicamento</a></li>
+                    <li><a class="dropdown-item" href="./dashboardEnfermedad.html">Enfermedad</a></li>
+                    <li><a class="dropdown-item" href="./dashboardSignovital.html">Signo Vital</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </header>
 
-    <section class="container">
-        <div class="row row-cols-1 row-cols-md-3 g-3" id="fila"></div>
+    <section class="container" style="margin-top: 90px;">
+        <div class="row row-cols-1 row-cols-md-3 g-3" id="fila" ></div>
     </section>
 
     <script src="../controller/controladorConsulta/controladorConsultaMedicamento.js" type="module"></script>
